@@ -37,13 +37,13 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/NotFound.html">not_found</a>: Adds not_found method for handling responses not otherwise handled by a route.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Pass.html">pass</a>: Adds pass method for skipping the current matching route block as if it didn't match.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/PathRewriter.html">path_rewriter</a>: Adds support for rewriting paths before routing.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/RouteBlockArgs.html">route_block_args</a>: Controls which arguments are passed to the route block.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/RunAppendSlash.html">run_append_slash</a>: Makes r.run use &quot;/&quot; instead of &quot;&quot; for app's PATH_INFO</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/RunHandler.html">run_handler</a>: Allows for modifying rack response arrays when using r.run, and continuing routing for 404 responses.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/StaticRouting.html">static_routing</a>: Adds class level static routing methods, for maximum performance when handling static routes (routes without placeholders).</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/StatusHandler.html">status_handler</a>: Adds status_handler method for handling responses without bodies for a given status code.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/TypeRouting.html">type_routing</a>: Route based on path extensions and Accept headers.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/UnescapePath.html">unescape_path</a>: Decodes URL-encoded PATH_INFO before routing.</li>
-      <li><a href="rdoc/classes/Roda/RodaPlugins/YieldResponse.html">yield_response</a>: Yields to the route block with #response as an optional second argument.</li>
     </ul></li>
     <li>Rendering/View: <ul>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Assets.html">assets</a>: Adds support for rendering CSS/JS javascript assets on the fly in development, or compiling them into a single compressed file in production.</li>
